; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_main.c_ixgbe_del_sanmac_netdev.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ixgbe/extr_ixgbe_main.c_ixgbe_del_sanmac_netdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.ixgbe_adapter = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ixgbe_mac_info }
%struct.ixgbe_mac_info = type { i32 }

@NETDEV_HW_ADDR_T_SAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @ixgbe_del_sanmac_netdev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ixgbe_del_sanmac_netdev(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.ixgbe_adapter*, align 8
  %5 = alloca %struct.ixgbe_mac_info*, align 8
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  store i32 0, i32* %3, align 4
  %6 = load %struct.net_device*, %struct.net_device** %2, align 8
  %7 = call %struct.ixgbe_adapter* @netdev_priv(%struct.net_device* %6)
  store %struct.ixgbe_adapter* %7, %struct.ixgbe_adapter** %4, align 8
  %8 = load %struct.ixgbe_adapter*, %struct.ixgbe_adapter** %4, align 8
  %9 = getelementptr inbounds %struct.ixgbe_adapter, %struct.ixgbe_adapter* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.ixgbe_mac_info* %10, %struct.ixgbe_mac_info** %5, align 8
  %11 = load %struct.ixgbe_mac_info*, %struct.ixgbe_mac_info** %5, align 8
  %12 = getelementptr inbounds %struct.ixgbe_mac_info, %struct.ixgbe_mac_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @is_valid_ether_addr(i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %1
  %17 = call i32 (...) @rtnl_lock()
  %18 = load %struct.net_device*, %struct.net_device** %2, align 8
  %19 = load %struct.ixgbe_mac_info*, %struct.ixgbe_mac_info** %5, align 8
  %20 = getelementptr inbounds %struct.ixgbe_mac_info, %struct.ixgbe_mac_info* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* @NETDEV_HW_ADDR_T_SAN, align 4
  %23 = call i32 @dev_addr_del(%struct.net_device* %18, i32 %21, i32 %22)
  store i32 %23, i32* %3, align 4
  %24 = call i32 (...) @rtnl_unlock()
  br label %25

25:                                               ; preds = %16, %1
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local %struct.ixgbe_adapter* @netdev_priv(%struct.net_device*) #1

declare dso_local i64 @is_valid_ether_addr(i32) #1

declare dso_local i32 @rtnl_lock(...) #1

declare dso_local i32 @dev_addr_del(%struct.net_device*, i32, i32) #1

declare dso_local i32 @rtnl_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
